[gd_scene load_steps=8 format=4]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://projectiles/Projectile.tscn" type="PackedScene" id=5]
[ext_resource path="res://pools/ObjectPool.gd" type="Script" id=6]
[ext_resource path="res://effects/HitEffect.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=8]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("2")]

[node name="ProjectilePool" type="Node" parent="." groups=["projectile_pool"]]
script = ExtResource("6")
scene = ExtResource("5")
size = 128

[node name="EnemyPool" type="Node" parent="." groups=["enemy_pool"]]
script = ExtResource("6")
scene = ExtResource("8")
size = 32

[node name="EffectPool" type="Node" parent="." groups=["effect_pool"]]
script = ExtResource("6")
scene = ExtResource("7")
size = 32

[node name="Player" parent="." instance=ExtResource("3")]

[node name="WeaponComponent" parent="Player"]
projectile_pool_path = NodePath("../ProjectilePool")

[node name="HUD" parent="." instance=ExtResource("4")]
